--- a/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
@@ -138,19 +138,19 @@ Lähetä tämä koodi valvojalle."</string>
   <string name="get_phone_verifycode_exceed_limit">Liian monta vahvistuskoodia on lähetetty tälle numerolle. Odota 24 tuntia ja yritä uudelleen.</string>
   <string name="guest_account_label">Mi Vierastili</string>
   <string name="i_agree">OK</string>
-  <string name="i_agree_continue">Jatka</string>
+  <string name="i_agree_continue">Hyväksyn</string>
   <string name="identity">Tunnistaminen</string>
   <string name="inconsistent_pwd">Salasanat eivät täsmää</string>
   <string name="input_email_address_notice">Käytämme tätä sähköpostia tilisi vahvistamiseen</string>
   <string name="input_new_pwd">Anna uusi salasana</string>
   <string name="io_error_title">Vahvista verkkosi</string>
   <string name="just_a_second">Odota hetki…</string>
-  <string name="kr_license_desc">Mi Tilin ja Mi Pilven palvelut vaatii sinua hyväksymään käyttöehdot ja tietosuojakäytännön.</string>
-  <string name="kr_permission_contacts_desc">Käytetään lukemaan yhteystietojan tietoja</string>
-  <string name="kr_permission_desc">Lue vaaditut käyttöoikeudet alapuolelta</string>
-  <string name="kr_permission_phone_desc">Käytetään tilin turvallisuuteen</string>
-  <string name="kr_permission_sms_desc">Käytetään automaattiseen täyttämiseen vahvistuskoodeille</string>
-  <string name="kr_permission_storage_desc">Käytetään diagnostiikkatietojen säilömiseen</string>
+  <string name="kr_license_desc">Sinun täytyy hyväksyä Käyttöehtomme ja Tietosuojakäytäntömme ennen Mi Tilin ja Mi Pilvipalveluiden käyttämistä.</string>
+  <string name="kr_permission_contacts_desc">Käyttääkseen yhteystietojen tietoja</string>
+  <string name="kr_permission_desc">Käyttöoikeuksia vaaditaan</string>
+  <string name="kr_permission_phone_desc">Turvatakseen tilisi</string>
+  <string name="kr_permission_sms_desc">Käytetään vahvistuskoodien automaattiseen täyttämiseen</string>
+  <string name="kr_permission_storage_desc">Käytetään diagnostiikkatietojen tallentamiseen</string>
   <string name="loading_micloud_sync_data">Odota hetki…</string>
   <string name="login_check_find_device">Haetaan laitteen turvallisuustietoa…</string>
   <string name="login_check_find_device_failed_title">Laitteen turvallisuustietoa ei voitu tarkistaa</string>
@@ -306,7 +306,7 @@ Aktivoi tilisi seuraamalla
   <string name="passport_phone_ticket_login">Kirjaudu sisään tekstiviestillä</string>
   <string name="passport_prev">Takaisin</string>
   <string name="passport_privacy_policy">Tietosuojakäytäntö</string>
-  <string name="passport_privacy_policy_required">Tietosuojakäytäntö (vaadittu)</string>
+  <string name="passport_privacy_policy_required">Tietosuojakäytäntö (pakollinen)</string>
   <string name="passport_pwd_generate_failure">Salasanan luonti epäonnistui</string>
   <string name="passport_pwd_generating">Luodaan…</string>
   <string name="passport_querying_phone_info">Pyydetään tilitietoja…</string>
@@ -390,7 +390,7 @@ Aktivoi tilisi seuraamalla
   <string name="passport_user_agreement_p2">Palveluehdot</string>
   <string name="passport_user_agreement_p3"> ja </string>
   <string name="passport_user_agreement_p4">Tietosuojakäytännön</string>
-  <string name="passport_user_agreement_required">Käyttöehdot (vaadittu)</string>
+  <string name="passport_user_agreement_required">Käyttöehdot (pakollinen)</string>
   <string name="passport_user_id_notice">Mi Tilisi ID on %s.</string>
   <string name="passport_user_reg_region">Maa/Alue</string>
   <string name="passport_user_reg_region_warning">Et voi muuttaa maatasi/aluettasi tilin luomisen jälkeen</string>
