--- a/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_extreme_mode">Äärimmäinen tila</string>
-  <string name="about_hide_mode">Tietoja Virransäästöstä</string>
+  <string name="about_extreme_mode">Äärimmäinen virransäästö</string>
+  <string name="about_hide_mode">Tietoja Sovellusten virransäästöstä</string>
   <string name="active_classify">Lajittele aktiivisuustilan mukaan</string>
   <string name="adaptive_battery_summary">Rajoita akkua sovelluksille, joita käytät harvemmin</string>
   <string name="adaptive_battery_title">Käytä Adaptiivista Akkua</string>
@@ -37,10 +37,10 @@ Virransäästö kohtelee tärkeitä sovelluksia valikoivasti."</string>
   <string name="empty_title_apps_container_list">Ei sovelluksia</string>
   <string name="enable_sleep_mode">Ota Lepotila käyttöön optimoidaksesi akun käyttöä yöllä</string>
   <string name="error_filename_too_long">Syöttämäsi tiedostonimi on liian pitkä.</string>
-  <string name="extreme_mode_max_item_alert">Voit valita enintään neljä sovellusta olemaan käynnissä taustalla Äärimmäisessä tilassa</string>
-  <string name="extreme_power_config_mode_category">Äärimmäinen tila</string>
+  <string name="extreme_mode_max_item_alert">Voit valita enintään neljä sovellusta olemaan käynnissä taustalla, kun Äärimmäinen virransäästö on käytössä</string>
+  <string name="extreme_power_config_mode_category">Äärimmäinen virransäästö</string>
   <string name="extreme_power_config_mode_desc">Siirry Äärimmäiseen tilaan poistaaksesi seuraavat ominaisuudet käytöstä: synkronointi, bluetooth, GPS, NFC, tuplanapautus, painikkeiden valot, Lukitusnäytön herättäminen ilmoituksista ja myös ilmoitusvalot. MIUI keskittyy virransäästöön.</string>
-  <string name="extreme_power_config_mode_title">Äärimmäinen tila</string>
+  <string name="extreme_power_config_mode_title">Äärimmäinen virransäästö</string>
   <string name="failure">Virhe</string>
   <string name="hide_mode_desc">Kun sovellus on käynnissä taustalla, sen työskentelyä seurataan akun käytön vähentämiseksi. Tämä toiminto hakee ja käyttää käyttäjätietoja %s mukaisesti</string>
   <string name="hide_system_app">Piilota järjestelmäsovellukset</string>
@@ -57,7 +57,7 @@ Virransäästö kohtelee tärkeitä sovelluksia valikoivasti."</string>
   <string name="notification_exit_extreme_mode_title">Äärimmäinen virransäästö poistettiin käytöstä</string>
   <string name="notification_open_extreme_mode_text">Äärimmäinen virransäästö otettiin käyttöön</string>
   <string name="performance_category">Suorituskyky</string>
-  <string name="power_center">Virransäästö</string>
+  <string name="power_center">Akun optimointi</string>
   <string name="power_checker_background_cpu_multi_apps_title">%1$s käy epätavallisesti</string>
   <string name="power_checker_background_cpu_title">%1$s käy epätavallisesti</string>
   <string name="power_checker_background_gps_multi_apps_title">%1$s hakee sijaintitietoa usein</string>
@@ -72,7 +72,7 @@ Virransäästö kohtelee tärkeitä sovelluksia valikoivasti."</string>
   <string name="power_checker_wakeup_alarm_title">%1$s käynnistyy usein</string>
   <string name="power_checker_wifi_scan_multi_apps_title">%1$s etsii Wi-Fi:ä usein</string>
   <string name="power_checker_wifi_scan_title">%1$s etsii Wi-Fi:ä usein</string>
-  <string name="power_config_apps">Virransäästö</string>
+  <string name="power_config_apps">Sovellusten virransäästö</string>
   <string name="power_config_event_delete">Poista</string>
   <string name="power_config_select_apps_title">Sovellukset</string>
   <string name="power_consume_abnormal_night">Akku tyhjenee yöllä</string>
