--- a/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
@@ -685,7 +685,7 @@ Siirtonopeus"</string>
   <string name="dtmf_tone_entries_normal">Normaali</string>
   <string name="dtmf_tones_summary">Aseta DTMF-äänien pituus</string>
   <string name="dtmf_tones_title">DTMF-äänet</string>
-  <string name="dual_4g_switch_summary">Salli 4G-yhteydet molemmille SIM-korttipaikoille.</string>
+  <string name="dual_4g_switch_summary">Salli 4G-yhteydet molemmille SIM-korttipaikoille</string>
   <string name="dual_4g_switch_title">Dual 4G</string>
   <string name="duration_disable_summary">Keston näyttäminen ei ole käytössä</string>
   <string name="duration_enable_summary">Keston näyttäminen on käytössä</string>
@@ -1233,17 +1233,49 @@ Laitteesi lukitaan automaattisesti jos yrityksesi menee vielä väärin"</string
   <string name="preferred_network_mode_dialogtitle">Ensisijainen verkko</string>
   <string name="preferred_network_mode_evdo_only_summary">Ensisijainen verkkotila: vain EvDo</string>
   <string name="preferred_network_mode_global_summary">Ensisijainen verkkotila: Maailmanlaajuinen</string>
+  <string name="preferred_network_mode_gsm_only">Vain GSM</string>
   <string name="preferred_network_mode_gsm_only_summary">Ensisijainen verkkotila: vain GSM</string>
+  <string name="preferred_network_mode_gsm_wcdma_auto">Automaattinen GSM/WCDMA</string>
+  <string name="preferred_network_mode_gsm_wcdma_preferred">Ensisijainen verkkotila: GSM/WCDMA</string>
+  <string name="preferred_network_mode_gsm_wcdma_preferred_choice">Ensisijainen verkkotila: GSM/WCDMA</string>
   <string name="preferred_network_mode_gsm_wcdma_summary">Ensisijainen verkkotila: GSM/WCDMA</string>
+  <string name="preferred_network_mode_gsm_wcdma_lte">GSM/WCDMA/LTE</string>
+  <string name="preferred_network_mode_gsm_wcdma_lte_choice">GSM/WCDMA/LTE</string>
   <string name="preferred_network_mode_lte_cdma_evdo_summary">Ensisijainen verkkotila: CDMA+LTE/EVDO</string>
   <string name="preferred_network_mode_lte_cdma_summary">Ensisijainen verkkotila: LTE/CDMA</string>
   <string name="preferred_network_mode_lte_gsm_umts_summary">Ensisijainen verkkotila: LTE/GSM/UMTS</string>
   <string name="preferred_network_mode_lte_gsm_wcdma_summary">Ensisijainen verkkotila: GSM/WCDMA/LTE</string>
+  <string name="preferred_network_mode_lte_only">Vain LTE</string>
   <string name="preferred_network_mode_lte_summary">Ensisijainen verkkotila: LTE</string>
+  <string name="preferred_network_mode_lte_tdscdma_cdma_evdo_gsm_wcdma_summary">Ensisijainen verkkotila: LTE/TDSCDMA/CDMA/EvDo/GSM/WCDMA</string>
+  <string name="preferred_network_mode_lte_tdscdma_gsm_summary">Ensisijainen verkkotila: LTE/GSM/TDSCDMA</string>
+  <string name="preferred_network_mode_lte_tdscdma_gsm_wcdma_summary">Ensisijainen verkkotila: LTE/TDSCDMA/GSM/WCDMA</string>
+  <string name="preferred_network_mode_lte_tdscdma_summary">Ensisijainen verkkotila: LTE / TDSCDMA</string>
+  <string name="preferred_network_mode_lte_tdscdma_wcdma_summary">Ensisijainen verkkotila: LTE/TDSCDMA/WCDMA</string>
+  <string name="preferred_network_mode_lte_wcdma_choice">LTE / WCDMA</string>
   <string name="preferred_network_mode_lte_wcdma_summary">Ensisijainen verkkotila: LTE/WCDMA</string>
   <string name="preferred_network_mode_summary">Vaihda verkon käyttötilaa</string>
+  <string name="preferred_network_mode_td_scdma_gsm_choice">TD-SCDMA/GSM</string>
+  <string name="preferred_network_mode_td_scdma_gsm_lte_choice">TD-SCDMA/GSM/LTE</string>
+  <string name="preferred_network_mode_td_scdma_gsm_wcdma">TD-SCDMA/GSM/WCDMA</string>
+  <string name="preferred_network_mode_td_scdma_gsm_wcdma_cdma_evdo_choice">TD-SCDMA/GSM/WCDMA/CDMA/EVDO</string>
+  <string name="preferred_network_mode_td_scdma_gsm_wcdma_choice">TD-SCDMA/GSM/WCDMA</string>
+  <string name="preferred_network_mode_td_scdma_gsm_wcdma_lte">TD-SCDMA/GSM/WCDMA/LTE</string>
+  <string name="preferred_network_mode_td_scdma_gsm_wcdma_lte_choice">TD-SCDMA/GSM/WCDMA/LTE</string>
+  <string name="preferred_network_mode_td_scdma_lte_choice">TD-SCDMA/LTE</string>
+  <string name="preferred_network_mode_td_scdma_lte_gsm_wcdma_cdma_evdo_choice">TD-SCDMA/LTE/GSM/WCDMA/CDMA/EVDO</string>
+  <string name="preferred_network_mode_td_scdma_only_choice">TD-SCDMA only</string>
+  <string name="preferred_network_mode_td_scdma_wcdma_choice">TD-SCDMA/WCDMA</string>
+  <string name="preferred_network_mode_td_scdma_wcdma_lte">TD-SCDMA/WCDMA/LTE</string>
+  <string name="preferred_network_mode_td_scdma_wcdma_lte_choice">TD-SCDMA/WCDMA/LTE</string>
+  <string name="preferred_network_mode_tdscdma_cdma_evdo_gsm_wcdma_summary">Ensisijainen verkkotila: TDSCDMA/CDMA/EvDo/GSM/WCDMA</string>
+  <string name="preferred_network_mode_tdscdma_gsm_summary">Ensisijainen verkkotila: TDSCDMA / GSM</string>
+  <string name="preferred_network_mode_tdscdma_gsm_wcdma_summary">Ensisijainen verkkotila: TDSCDMA/GSM/WCDMA</string>
   <string name="preferred_network_mode_tdscdma_summary">Ensisijainen verkkotila: TDSCDMA</string>
+  <string name="preferred_network_mode_tdscdma_wcdma_summary">Ensisijainen verkkotila: TDSCDMA / WCDMA</string>
   <string name="preferred_network_mode_title">Ensisijainen verkko</string>
+  <string name="preferred_network_mode_wcdma_lte">WCDMA/LTE</string>
+  <string name="preferred_network_mode_wcdma_only">WCDMA only</string>
   <string name="preferred_network_mode_wcdma_only_summary">Ensisijainen verkkotila: vain WCDMA</string>
   <string name="preferred_network_mode_wcdma_perf_summary">Ensisijainen verkkotila: ensisijaisesti WCDMA</string>
   <string name="preferred_network_restrict_network_changed_incall">Mobiiliverkkoa ei voi vaihtaa kesken puhelun</string>
