XML 9.3.7 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 9.3.7.

--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -149,6 +149,7 @@ ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="config_name_group">Ryhmäselfie</string>
   <string name="config_name_hht">HHT</string>
   <string name="config_name_magic">Taika</string>
+  <string name="config_name_ratio">Suhde</string>
   <string name="config_name_scene">Näkymä</string>
   <string name="config_name_setting">Asetukset</string>
   <string name="config_name_sound">Ääni</string>
