--- a/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
@@ -151,6 +151,7 @@ Vapauta tilaa tai siirrä vain tärkeät kohteet."</string>
   <string name="cancel_moving_dialog_message">Lopetetaanko tuonti nyt?</string>
   <string name="cancel_moving_dialog_title">Lopeta tuonti</string>
   <string name="cancel_restore">Lopeta</string>
+  <string name="click_soft_ap_to_link">Valitse yhdistettävä hotspot</string>
   <string name="click_to_view">Napauta katsoaksesi</string>
   <string name="close_twice_auth_btn">Poista kaksivaiheinen todentaminen käytöstä</string>
   <string name="close_twice_auth_note">"Huomio:
@@ -177,6 +178,11 @@ https://appleid.apple.com/#!&amp;page=signin poistaaksesi käytöstä"</string>
   <string name="comma_seperator">", "</string>
   <string name="compute_backup_info">Noudetaan varmuuskopion tietoja…</string>
   <string name="compute_delete_contact_info">Noudetaan tietoja…</string>
+  <string name="confirm_exit_link">Poistu</string>
+  <string name="confirm_exit_link_cancel">Älä poistu</string>
+  <string name="confirm_exit_link_msg">Sovelluksesta poistuminen keskeyttää meneillään olevan siirron. Sinun täytyy muodostaa yhteys uudelleen laitteiden kesken. Poistutaanko sovelluksesta siitä huolimatta?</string>
+  <string name="confirm_exit_link_title">Siirron keskeyttäminen</string>
+  <string name="connect_soft_ap_label">Yhdistetään uuteen laitteeseen…</string>
   <string name="connect_wifi">Yhdistä Wi-Fiin</string>
   <string name="connect_wifi_tip">Verkkoyhteyttä ei voitu muodostaa. Yhdistä Wi-Fiin tuodaksesi kohteita iCloudista.</string>
   <string name="contact_title">Yhteystiedot</string>
@@ -334,7 +340,9 @@ http://www.miliao.com
   <string name="notif_trans_sending_completed">Tiedot lähetettiin onnistuneesti</string>
   <string name="notif_trans_sending_failed">Tietojen lähettäminen epäonnistui</string>
   <string name="notif_trans_wait_for_reconnecting">Yhteys keskeytyi. Yhdistä uudelleen.</string>
-  <string name="page_loading">Hetki pieni…</string>
+  <string name="old_soft_name">Yhdistä käyttäen QR-koodia</string>
+  <string name="old_way">Voit yhdistää myös käyttäen QR-koodia. Luo koodi napauttamalla.</string>
+  <string name="page_loading">Odota hetki…</string>
   <string name="password">Salasana</string>
   <string name="password_null">Salasana ei voi olla tyhjä</string>
   <string name="pause">Pysäytä</string>
@@ -349,7 +357,8 @@ http://www.miliao.com
   <string name="prompt_writing">Tallennetaan…</string>
   <string name="read_encrypt_fail">Salattua varmuuskopiota ei voitu lukea</string>
   <string name="reconnect">Yhdistä uudelleen</string>
-  <string name="refresh">Virkistä</string>
+  <string name="recreate_soft_ap_tips">Yritä uudelleen napauttamalla alla olevaa painiketta.</string>
+  <string name="refresh">Päivitä</string>
   <string name="remote_receive">Vastaanota</string>
   <string name="restore">Palauta</string>
   <string name="restore_backup">Palauta</string>
@@ -384,6 +393,8 @@ Vapauta vähintään %s."</string>
   <string name="sc_service_unavailable">Mi Pilvi ei ole saatavilla</string>
   <string name="sc_unaccess_password_file">Wi-Fi verkon salasanaa ei löydy</string>
   <string name="sc_unauthorized">Kirjaudu uudestaan</string>
+  <string name="scan_soft_ap">Etsitään uutta laitetta…</string>
+  <string name="scan_soft_ap_label">Yhdistä vanhaan laitteeseen</string>
   <string name="sd_not_available">Aseta SD-kortti nyt</string>
   <string name="sdcard_no_enough_space">Ei ole tarpeeksi tilaa</string>
   <string name="sdcard_no_enough_space_message">SD-kortillasi ei ole tarpeeksi tallennustilaa.</string>
@@ -407,6 +418,8 @@ Vapauta vähintään %s."</string>
   <string name="size_kilo_byte">Kt</string>
   <string name="size_mega_byte">Mt</string>
   <string name="sms_title">Viestit</string>
+  <string name="soft_ap_create_failed">Hotspottia ei voitu luoda</string>
+  <string name="soft_ap_creating">Luodaan hotspottia…</string>
   <string name="software_backup_info">Sovellusten tiedot</string>
   <string name="start_backup">Varmuuskopioi</string>
   <string name="start_restore">Palauta</string>
@@ -479,7 +492,9 @@ Vapauta vähintään %s."</string>
   <string name="trans_detail_category_wechat_qq">WeChat ja QQ tiedot (mukaan lukien keskusteluhistoria)</string>
   <string name="trans_detail_item_app_data_selected_tip">Valittiin myös vastaavat sovellukset..</string>
   <string name="trans_detail_item_app_data_too_large_tip">Näyttää siltä, että kohde on liian suuri siirrettäväksi.</string>
-  <string name="trans_detail_list_footer">Huomaa: Voit valita siirrettävät sovellukset erikseen. Jos valitset sovellustiedot, myös vastaavat sovellukset siirretään.</string>
+  <string name="trans_detail_list_footer">"1. Voit valita yksittäisiä sovelluksia, joita haluat siirtää.
+2. Jos valitset sovellustiedot, niitä vastaavat sovellukset valitaan myös.
+3. WeChat- ja QQ-sovelluksien sovellustietoja ei välttämättä siirretä yhteensopivuusongelmien takia. Voit yrittää sovelluksen sisäisiä siirto-ominaisuuksia."</string>
   <string name="trans_detail_page_tip">Mitä enemmän kohteita valitset, sitä kauemmin siirtäminen kestää.</string>
   <string name="trans_detail_qq_data">QQ tiedot (mukaan lukien keskusteluhistoria)</string>
   <string name="trans_detail_sys_data_list_title">Järjestelmäsovellukset</string>
@@ -497,6 +512,7 @@ Vapauta vähintään %s."</string>
   <string name="trans_generate_qrcode_failed">QR-koodia ei voitu luoda. Sulje muut sovellukset ja yritä uudelleen.</string>
   <string name="trans_generating_qrcode">Luodaan QR-koodia…</string>
   <string name="trans_intro_desc_1">Mi puhelimella, yhdistä Wi-Fi-verkkoon ja napauta \"Olen vastaanottaja\". Valitse iOS -laitteesi ja kirjaudu sisään iCloudiin ja tuo tiedot.</string>
+  <string name="trans_intro_desc_10">Napauta \"Yhdistä käyttäen QR-koodia\" uudella laitteella ja skannaa QR-koodi muodostaaksesi yhteyden.</string>
   <string name="trans_intro_desc_3">Peruuta siirto, poistu Mi Moverista ja aloita alusta. Tiedostojen kaksoiskappaleet korvataan uuden siirron aikana.</string>
   <string name="trans_intro_desc_4">Mi Mover käyttää Wi-Fiä tiedostojen siirtämiseen. Sen takia et voi siirron aikana yhdistää kummallakaan laitteella internetiin käyttämällä Wi-Fiä. Voit silti käyttää mobiilidataa. Tästä huolimatta, jotkut uudemmat laitteet (kuten Mi 6) voivat silti yhdistää internetiin käyttämällä Wi-Fiä siirron aikana.</string>
   <string name="trans_intro_desc_5">Tallennustilaa vanhoilla laitteilla käytetään siirtopakettien luomiseen. Varmista, että sinulla on vanhassa puhelimessasi vähintään 500 Mt - 1 Gt käytettävissä olevaa tallennustilaa, ennen kuin aloitat siirron.</string>
@@ -504,12 +520,14 @@ Vapauta vähintään %s."</string>
   <string name="trans_intro_desc_7">Jotkut sovellusprofiilit (verkkopankki, talous jne.) on liitettynä tiettyyn laitteeseen tietoturvasyistä. Yritä uudella laitteella tyhjentää sovellustiedot tai asentaa sovellus uudelleen.</string>
   <string name="trans_intro_desc_8">WeChat -sovellustiedot ja keskusteluhistoria ei välttämättä siirry kokonaan käyttämällä Mi Moveria. Mene WeChatin asetuksiin ja kirjaudu ulos tililtäsi, jotta siirtäminen onnistuisi paremmalla mahdollisuudella.</string>
   <string name="trans_intro_desc_account">Sinun täytyy kirjautua uudella laitteella tileillesi uudelleen (esim. Mi Tili, Exchange, Google jne.) tietoturvasyiden takia.</string>
+  <string name="trans_intro_desc_gms">Yhteensopivuusongelmien aiheuttamien epäonnistuneiden siirtojen korkean todennäköisyyden vuoksi Mi Mover ei tue Google-sovellusten tuottaman tiedon siirtoa.</string>
   <string name="trans_intro_desc_multiapp">Mi Mover ei siirrä sovellustietoja kaksoissovelluksista, välttääkseen tiedostojen ristiriidat.</string>
   <string name="trans_intro_desc_multiuser">Mi Mover ei voi käyttää Toisen tilan kohteita. Siirrä kohteet Ensimmäiseen tilaan ja käynnistä Mi Mover siellä.</string>
   <string name="trans_intro_desc_new">Napauta \"Olen vastaanottaja\". QR-koodi luodaan.</string>
   <string name="trans_intro_desc_old">Napauta \"Olen lähettäjä\". Skannaa QR-koodi uudella puhelimella ja odota, kunnes Mi Mover tunnistaa, mitkä tiedostot lähetetään ja sen jälkeen napauta \"Lähetä"\.</string>
   <string name="trans_intro_desc_private">Mi Siirätjä ei voi käyttää piilotetun albumin kuvia, koska ne ovat salattu. Voit palauttaa nämä kuvat Mi Pilvestä uudella laitteella.</string>
   <string name="trans_intro_question_1">%d. Kuinka käytän Mi Moveria tietojen siirtämiseen iOS -laitteelta?</string>
+  <string name="trans_intro_question_10">%d. Etkö löydä hotspottia vanhalla laitteella?</string>
   <string name="trans_intro_question_2">%d. Kuinka käytän Mi Moveria tietojen siirtämiseen Android -laitteelta?</string>
   <string name="trans_intro_question_3">%d. Mitä minun pitäisi tehdä, jos Mi Mover jää jumiin tiettyyn vaiheeseen?</string>
   <string name="trans_intro_question_4">%d. Miksi en voi käyttää Wi-Fiä siirtojen aikana?</string>
@@ -520,6 +538,7 @@ Vapauta vähintään %s."</string>
   <string name="trans_intro_question_9">%d. Mitä kohteita ei voi siirtää?</string>
   <string name="trans_intro_title">UKK</string>
   <string name="trans_intro_title_account">Tilit ja salasanat:</string>
+  <string name="trans_intro_title_gms">Google-sovelluksien luomat tiedot:</string>
   <string name="trans_intro_title_multiapp">Kaksoissovelluksien tiedot:</string>
   <string name="trans_intro_title_multiuser">Toisen tilan tiedot:</string>
   <string name="trans_intro_title_new">Uuden puhelimen:</string>
@@ -572,8 +591,9 @@ Pidä laitteet lähellä toisiaan."</string>
   <string name="trans_select_data">Valitse lähetettävät tiedostot</string>
   <string name="trans_select_data_no_space">"Tallennustilaa ei ole tarpeeksi uudella laitteella (%s käytettävissä).
 Vapauta tallennustilaa tai siirrä vain tärkeät kohteet.</string>
-  <string name="trans_select_data_tips">"Valitse lähetettävät tiedostot
-Samanlaiset tiedostot uudella laitteella korvataan"</string>
+  <string name="trans_select_data_tips">"Valitse lähetettävät kohteet.
+Samanlaiset kohteet uudella laitteella korvataan.
+(Siirrettävien kohteiden koko on arvioitu.)"</string>
   <string name="trans_select_data_too_large">"Valitsit liian monta kohdetta siirrettäväksi.
 Valitse vain tärkeät kohteet, jotta siirtäminen olisi nopeampaa."</string>
   <string name="trans_select_device_receive">Valitse tietojen vastaanottava laite.</string>
@@ -609,9 +629,15 @@ ja Mi Mover on käytössä"</string>
   <string name="user_notice_message">Jotkut toiminnot tarvitsevat internet yhteyden toimiakseen normaalisti.</string>
   <string name="user_notice_title">Huomio</string>
   <string name="view_password_description">Näytä salasana</string>
+  <string name="wait_link">"Yhdistä vanha laitteesi tähän hotspottiin.
+Älä poistu tältä sivulta, ennen kuin yhteys on muodostettu."</string>
+  <string name="waiting">Odota hetki…</string>
   <string name="wifi_title">Wi-Fi asetukset</string>
+  <string name="xiaomi_bytes_unit">%1$s t</string>
   <string name="xiaomi_connect_download_manager_fail">Lataamista ei voitu aloittaa. Varmista, että Download Manager toimii normaalisti.</string>
   <string name="xiaomi_external_storage_unavailable">Taltio ei ole käytettävissä, tarkista SD-kortti.</string>
+  <string name="xiaomi_kilobytes_unit">%1$s Kt</string>
+  <string name="xiaomi_megabytes_unit">%1$s Mt</string>
   <string name="xiaomi_router">Mi Reititin</string>
   <string name="xiaomi_router_location">Mi Reititin %s</string>
   <string name="xiaomi_update_dialog_message">"Esittelyssä versio %1$s
