--- a/Finnish/main/MiRecycle.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiRecycle.apk/res/values-fi-rFI/strings.xml
@@ -56,7 +56,6 @@ the world"</string>
   <string name="buy_title_two">Tired of visiting service centers?</string>
   <string name="buy_top_summary">"Never worry about 
 accidental damage to your smartphone"</string>
-  <string name="cashify_entrance">Sell your old phone</string>
   <string name="cd_charger_test_image">charger_test_image</string>
   <string name="cd_charger_test_status">charger test status</string>
   <string name="cd_dead_pixel_test_image">Dead pixel test image</string>
@@ -127,8 +126,8 @@ Damaged Device from your doorstep"</string>
   <string name="input_wallet_information">Input Mobile Number</string>
   <string name="instant_bank_transfer">Instant Bank Transfer</string>
   <string name="insurance_button">Insurance</string>
-  <string name="insurance_description">Insurance gives you additional repair coverage</string>
-  <string name="insurance_entrance">Mi Protect uudelle laitteelle</string>
+  <string name="insurance_description">OneAssist vakuutus antaa sinulle lisävakuutusta</string>
+  <string name="insurance_entrance">Suojaa uusi puhelimesi</string>
   <string name="item_name_battery">Akku</string>
   <string name="item_name_bluetooth">Bluetooth</string>
   <string name="item_name_frontcamera">Etukamera</string>
@@ -145,6 +144,7 @@ Damaged Device from your doorstep"</string>
   <string name="label_my_order">Tilaukseni</string>
   <string name="landmark">Landmark</string>
   <string name="loading">Loading…</string>
+  <string name="main_entrance">Myy puhelimesi</string>
   <string name="main_overall_test">START</string>
   <string name="msg_coupon_applied">Coupon applied successfully.</string>
   <string name="msg_empty_cancel_reason">Please select cancel reason</string>
@@ -177,7 +177,7 @@ Damaged Device from your doorstep"</string>
 Huomioi, että laitteen hinnat voivat muuttua. Myy puhelimesi nyt saadaksesi siitä vielä hyvän hinnan."</string>
   <string name="recycle_button">Kierrätä</string>
   <string name="recycle_description">Saat suurimman hinnan kierrättämällä vanhan puhelimesi</string>
-  <string name="recycle_entrance">Cashify Recycle</string>
+  <string name="recycle_entrance">Cashify - Myy puhelimesi</string>
   <string name="reschedule">Reschedule</string>
   <string name="result_no_fail">Everything is great</string>
   <string name="search_menu_title">Search</string>
